--- a/collage/templates/index.html
+++ b/collage/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 {{block.super}}
-<div class="container">
+<div class="container" style="background-color: #FEF5E7  ">
 
   <h1 class="text-center">Collage</h1>
   <div class="row">
