--- a/collage/templates/navbar.html
+++ b/collage/templates/navbar.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #F8C471">
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #F6DDCC ">
     <a class="navbar-brand" href="{% url 'index' %}">Collage</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
