--- a/collage/templates/base.html
+++ b/collage/templates/base.html
@@ -14,6 +14,7 @@
 
   {% block styles %}
     {% bootstrap_css %}
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
   {% endblock %}
 
