--- a/collage/templates/location.html
+++ b/collage/templates/location.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
+
 {{block.super}}
 <div class="container">
   <h1 class="text-center">{{location.name}}</h1>
   <div class="row">
     {% for image in images %}
-      <div class="col-md-6">
-        <img  style=" margin-top: 20px; margin-bottom: 20px; width:500px; height:500px;" src="{{image.image.url}}" class="img-fluid" alt="Image" data-toggle="modal" data-target="#{{image.id}}">
+      <div class="col-md-4">
+        <img  style="margin: 20px; width:100%; " src="{{image.image.url}}" class="img-fluid" alt="Image" data-toggle="modal" data-target="#{{image.id}}">
 
         <!-- Image Details modal -->
 
@@ -20,7 +21,7 @@
                 </button>
               </div>
               <div class="modal-body">
-                <img style="max-width:100%; max-height:100%" src="{{image.image.url}}" class="img-fluid" alt="Image">
+                <img src="{{image.image.url}}" class="img-fluid" alt="Image">
                 <br>
                 {{image.image_description}}
               </div>
