--- a/collage/templates/search.html
+++ b/collage/templates/search.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
+
+{{block.super}}
+
 <div class="container">
   <div class="row">
     {% if images %}
@@ -11,9 +14,8 @@
   <div class="row">
     {% if images %}
     {% for image in images %}
-    <div class="col-md-5">
-      <img style=" margin-top: 20px; margin-bottom: 20px; width:500px; height:500px;" src="{{image.image.url}}" class="img-fluid" alt="Image" data-toggle="modal" data-target="#{{image.id}}">
-
+    <div class="col-md-4">
+      <img style=" margin: 20px; width:100%;" src="{{image.image.url}}" class="img-fluid" alt="Image" data-toggle="modal" data-target="#{{image.id}}">
       <!-- Image Details modal -->
 
       <div class="modal fade bd-example-modal-lg" id="{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="imageTitle" aria-hidden="true">
@@ -26,7 +28,7 @@
               </button>
             </div>
             <div class="modal-body">
-              <img style="max-width:100%; max-height:100%" src="{{image.image.url}}" class="img-fluid" alt="Image">
+              <img src="{{image.image.url}}" class="img-fluid" alt="Image">
               <br>
               {{image.image_description}}
             </div>
@@ -37,6 +39,7 @@
           </div>
         </div>
       </div>
+      
     </div>
     <script type="text/javascript">
       function copyUrl(element) {
